src/styles/global.css
@import "tailwindcss";
@plugin "@tailwindcss/typography";

@custom-variant light (&:where(.light-mode, .light-mode *));

:root {
  /* DARK MODE */
  --dynamic-color-background: #06070a;
  --dynamic-color-background-secondary: #0e0f16;
  --dynamic-color-foreground: white;
  --dynamic-color-foreground-contrast: black;

  &.light-mode {
    /* LIGHT MODE */
    --dynamic-color-background: #ffffff;
    --dynamic-color-background-secondary: #f8f8f8;
    --dynamic-color-foreground: black;
    --dynamic-color-foreground-contrast: white;
  }
}

@theme {
  --color-background: var(--dynamic-color-background);
  --color-background-secondary: var(--dynamic-color-background-secondary);
  --color-foreground: var(--dynamic-color-foreground);
  --color-foreground-contrast: var(--dynamic-color-foreground-contrast);
}

/* color animations */
* {
  @apply transition-colors duration-200;
}

/**
 * These are quite manual and error prone at the moment. Consider finding a more
 * robust pattern for this, and/or utilising the built in inverted/darkmode support
 * in prose. Still, let us avoid falling back to legacy tailwind.config patterns.
 */
@utility prose {
  --tw-prose-custom-default: var(--color-foreground);

  --tw-prose-body: var(--tw-prose-custom-default);
  --tw-prose-headings: var(--color-sky-400);
  --tw-prose-lead: var(--tw-prose-custom-default);
  --tw-prose-links: var(--color-sky-400);
  --tw-prose-bold: var(--tw-prose-custom-default);
  --tw-prose-counters: var(--tw-prose-custom-default);
  --tw-prose-bullets: var(--tw-prose-custom-default);
  --tw-prose-hr: var(--tw-prose-custom-default);
  --tw-prose-quotes: var(--tw-prose-custom-default);
  --tw-prose-quote-borders: var(--tw-prose-custom-default);
  --tw-prose-captions: var(--tw-prose-custom-default);
  --tw-prose-code: var(--tw-prose-custom-default);
  --tw-prose-pre-code: var(--tw-prose-custom-default);
  --tw-prose-pre-bg: var(--tw-prose-custom-default);
  --tw-prose-th-borders: var(--tw-prose-custom-default);
  --tw-prose-td-borders: var(--tw-prose-custom-default);

  a:hover {
    color: var(--color-sky-600);
  }
}

